# byte-order

./: CHANGELOG.md  byte-order.cabal
.github/workflows/: build.yaml
src/Data/Primitive/ByteArray/: BigEndian.hs  LittleEndian.hs
src/Data/Primitive/Ptr/: BigEndian.hs
src/System/: ByteOrder.hs
src/System/ByteOrder/: Class.hs  Unsafe.hs
test/: Unit.hs
