cabal-version: 2.2
name: byte-order
version: 0.1.0.0
synopsis: Portable big-endian and little-endian conversions
homepage: https://github.com/andrewthad/byte-order
bug-reports: https://github.com/andrewthad/byte-order/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2019 Andrew Martin
category: Data
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    System.ByteOrder
    System.ByteOrder.Class
  build-depends:
    , base >=4.11.1.0 && <5
    , primitive >=0.6.4 && <0.8
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2 -Wall
