cabal-version:   2.2
name:            byte-order
version:         0.1.3.1
synopsis:        Portable big-endian and little-endian conversions
description:
  This library provides an interface to portably work with byte
  arrays whose contents are known to be of a fixed endianness.
  There are two ways to use this module. See the `System.ByteOrder`
  module for more documentation.

homepage:        https://github.com/byteverse/byte-order
bug-reports:     https://github.com/byteverse/byte-order/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Andrew Martin
maintainer:      amartin@layer3com.com
copyright:       2019 Andrew Martin
category:        Data
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==9.4.8 || ==9.6.3 || ==9.8.1

common build-settings
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages

library
  import:          build-settings
  exposed-modules:
    Data.Primitive.ByteArray.BigEndian
    Data.Primitive.ByteArray.LittleEndian
    Data.Primitive.Ptr.BigEndian
    System.ByteOrder
    System.ByteOrder.Class

  build-depends:
    , base                 >=4.11.1.0 && <5
    , primitive            >=0.6.4    && <0.10
    , primitive-unaligned  >=0.1.1    && <0.2
    , wide-word            >=0.1.1    && <0.2

  hs-source-dirs:  src
  ghc-options:     -O2

test-suite unit
  import:         build-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Unit.hs
  build-depends:
    , base
    , byte-order
    , primitive
    , wide-word

source-repository head
  type:     git
  location: git://github.com/byteverse/byte-order.git
